--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
             <div class="col-twelve">
 
                 <h5>Hello, World.</h5>
-                <h1>I'm Mohamad Abou Alnaser.</h1>
+                <h1>Hojat Ghasemi</h1>
 
                 <p class="intro-position">
                     <span>Native Android App Developer</span>
                     <span>Back-end Developer</span>
                 </p>
 
-                <a class="button stroke smoothscroll" href="#about" title="">En savoir plus</a>
+                <a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
 
             </div>
 
@@ -135,11 +135,11 @@
 
             <ul class="info-list">
                 <li>
-                    <strong>Nom et Prénom:</strong>
-                    <span>ABOU ALNASER Mohamad</span>
+                    <strong>Full Name:</strong>
+                    <span>Hojat Ghasemi</span>
                 </li>
                 <li>
-                    <strong>Date de naissance:</strong>
+                    <strong>Date of birth:</strong>
                     <span>Né le : 15 / 09 / 1982</span>
                 </li>
                 <li>
@@ -147,15 +147,9 @@
                     <span>m.aboualnasser@gmail.com</span>
                 </li>
                 <li>
-                    <strong>Adress:</strong>
-                    <span>2 rue Barbes, 92 210 Montrouge</span>
+                    <strong>Location:</strong>
+                    <span>Ontario, Canada</span>
                 </li>
-                <li>
-                    <strong>Phone:</strong>
-                    <span>+ 33 6 27 76 01 44</span>
-                </li>
-
-
             </ul>
             <!-- /info-list -->
 
@@ -412,7 +406,7 @@
 
                     <h3>SYSTEMES ET BASE DE DONNEES</h3>
 
-                    <p class="desc"># Windows # Ubuntu # MySQL </br># Firebase.
+                    <p class="desc"># Windows # Ubuntu # MySQL <br/># Firebase.
                     </p>
 
                 </div>
@@ -496,11 +490,8 @@
 
     <div class="row section-intro">
         <div class="col-twelve">
-
             <h5>Contact</h5>
-            <h1>N'hésitez pas à me contacter.</h1>
-
-
+            <h1>I'm currently available for cooperation/employment on native Android projects</h1>
         </div>
     </div>
     <!-- /section-intro -->
@@ -512,10 +503,10 @@
             <!-- form -->
             <form id="contactform" action="//formspree.io/m.aboualnasser@gmail.com" method="POST">
 
-                <input type="text" name="name" placeholder="Votre Nome">
-                <input type="email" name="_replyto" placeholder="Votre Mail">
-                <textarea name="message" placeholder="Votre Message"></textarea>
-                <input type="submit" value="Envoyez">
+                <input type="text" name="name" placeholder="Your Name">
+                <input type="email" name="_replyto" placeholder="Your Email Address">
+                <textarea name="message" placeholder="Message"></textarea>
+                <input type="submit" value="Send">
             </form>
             <!-- Form End -->
 
@@ -541,7 +532,7 @@
                 <i class="icon-pin"></i>
             </div>
 
-            <h5>Pour me contacter</h5>
+            <h5>Contact me</h5>
 
             <p>
                 2 rue barbes<br> 92120
@@ -595,9 +586,9 @@
 
             <ul class="footer-social">
 
-                <li><a target="_blank" href="https://twitter.com/MOHAMADABOUALNA"><i class="fa fa-twitter"></i></a></li>
-                <li><a target="_blank" href="https://github.com/aboualnaser"><i class="fa fa-github"
-                                                                                aria-hidden="true"></i>
+                <li><a target="_blank" href="https://twitter.com/hojat_93"><i class="fa fa-twitter"></i></a></li>
+                <li><a target="_blank" href="https://github.com/hojat72elect"><i class="fa fa-github"
+                                                                                 aria-hidden="true"></i>
                 </a></li>
             </ul>
 
