Added new stuff to my portfolio

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 <img src="images/MOHAMAD.png" alt="Profile Picture">
 
                 <p class="lead">I'm a professional software developer recently graduated from Laurentian University in
-                    master's degree of Computer Science. I have been developing native Android apps via Java/Kotlin
-                    technologies in the past decade. Notify Plus is the latest example of my Android apps originally
-                    developed using Java and later on migrated to Kotlin. I'm actively improving my portfolio as a
-                    front-end developer; latest tech-stack I'm currently working on is Dart programming langauge and
+                    master's degree of Computer Science. I have been developing native Android apps in Java/Kotlin
+                    throughout the past decade. Notify Plus is the latest example of my Android apps originally
+                    developed in Java and later on migrated to Kotlin. Latest tech-stack I'm currently working on is
+                    Dart programming langauge and
                     Flutter platform.</p>
             </div>
 
@@ -140,11 +140,11 @@
                 </li>
                 <li>
                     <strong>Date of birth:</strong>
-                    <span>Né le : 15 / 09 / 1982</span>
+                    <span>1993-07-02</span>
                 </li>
                 <li>
                     <strong>Email:</strong>
-                    <span>m.aboualnasser@gmail.com</span>
+                    <span>hghasemi@laurentian.ca</span>
                 </li>
                 <li>
                     <strong>Location:</strong>
@@ -162,28 +162,29 @@
 
             <ul class="skill-bars">
                 <li>
-                    <div class="progress percent90"><span>90%</span></div>
-                    <strong>HTML5</strong>
-                </li>
-                <li>
                     <div class="progress percent85"><span>85%</span></div>
-                    <strong>CSS</strong>
+                    <strong>Java</strong>
                 </li>
                 <li>
-                    <div class="progress percent70"><span>70%</span></div>
-                    <strong>JQuery</strong>
+                    <div class="progress percent80"><span>80%</span></div>
+                    <strong>Kotlin</strong>
                 </li>
                 <li>
-                    <div class="progress percent85"><span>85%</span></div>
-                    <strong>Bootstrap</strong>
+                    <div class="progress percent80"><span>80%</span></div>
+                    <strong>XML UI design</strong>
                 </li>
                 <li>
                     <div class="progress percent75"><span>75%</span></div>
-                    <strong>PHP</strong>
+                    <strong>Git version control</strong>
                 </li>
                 <li>
-                    <div class="progress percent75"><span>75%</span></div>
-                    <strong>Java script</strong>
+                    <div class="progress percent60"><span>60%</span></div>
+                    <strong>Firebase</strong>
+                </li>
+
+                <li>
+                    <div class="progress percent50"><span>50%</span></div>
+                    <strong>Flutter</strong>
                 </li>
 
             </ul>
@@ -195,9 +196,9 @@
 
     <div class="row button-section">
         <div class="col-twelve">
-            <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Embaochez-moi</a>
+            <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire me</a>
             <a href="https://github.com/aboualnaser/aboualnaser.github.io/raw/master/images/CV%20_%20Mohamad%20Abou%20Alnaser_Dev%20Web%20PHP%20.pdf"
-               target="_blank" title="Download CV" class="button button-primary">Téléchargez mon CV</a>
+               target="_blank" title="Download CV" class="button button-primary">Download my CV</a>
         </div>
     </div>
 
@@ -213,7 +214,7 @@
 
         <div class="col-twelve resume-header">
 
-            <h2>Expériences Professionelles</h2>
+            <h2>Professional Experience</h2>
 
         </div>
         <!-- /resume-header -->
