added the education section

--- a/index.html
+++ b/index.html
@@ -112,11 +112,11 @@
 
             <div class="intro-info">
 
-                <img src="images/MOHAMAD.png" alt="Profile Picture">
+                <img src="images/HOJAT.png" alt="Profile Picture">
 
                 <p class="lead">I'm a professional software developer recently graduated from Laurentian University in
-                    master's degree of Computer Science. I have been developing native Android apps in Java/Kotlin
-                    throughout the past decade. Notify Plus is the latest example of my Android apps originally
+                    master's degree of Computer Science. I have been studying/working in the field of computer science
+                    during the past decade. Notify Plus is the latest example of my Android apps originally
                     developed in Java and later on migrated to Kotlin. Latest tech-stack I'm currently working on is
                     Dart programming langauge and
                     Flutter platform.</p>
@@ -214,7 +214,7 @@
 
         <div class="col-twelve resume-header">
 
-            <h2>Professional Experience</h2>
+            <h2>Education</h2>
 
         </div>
         <!-- /resume-header -->
@@ -230,17 +230,12 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>COMUS | France - Déploiement réseau – 2015</h3>
-                        <p>Déploiement et mise en service des équipements radio et transmission du réseau Bouygues
-                            Télécom en Ile-deFrance.
+                        <h3>Master of Computational Sciences - Laurentian University - 2020_2022</h3>
+                        <p>Topic of graduate research: "Fine-tuning a General Transformer Model on Story-lines of IMDB
+                            Movies Database"
                         </p>
                     </div>
 
-                    <div class="timeline-content">
-                        <h4>Al Furat Petroleum Company | Syrie - Ingénieur Télécom – 2010 / 2013</h4>
-                        <p>Déploiement et mise en service des équipements radio et transmission (Sagem) § Configuration
-                            de routeurs Cisco .</p>
-                    </div>
 
                 </div>
                 <!-- /timeline-block -->
@@ -252,8 +247,7 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Intracom | Syrie – Gestionnaire d e s i t e d e télécommunications 2008 / 2010</h3>
-                        <p>Déploiement du projet de réseau point-à-multipont</p>
+                        <h3>Bachelor of science - SBUK - 2012_2017</h3>
                     </div>
 
 
