--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
         <div class="col-twelve resume-header">
 
-            <h2>FORMATION ET DIPLOMES</h2>
+            <h2>Apps Portfolio</h2>
 
         </div>
         <!-- /resume-header -->
@@ -284,16 +284,18 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Simplon.co – Montreuil </h3>
-                        <p>2016 (7 mois)- Present</p>
+                        <h3>Notify Plus</h3>
+<!--                        <p></p>-->
                     </div>
 
                     <div class="timeline-content">
 
-                        <p>Formation intensive au développement Web (HTML, CSS, JS, PHP, Symfony) > Animation d’ateliers
-                            d’initiation à la programmation à destination des enfants et des adultes (Minecraft, Code
-                            n’Slash, Scratch) > Participation au Hackathons
-                            # RATP.</p>
+                        <p>Notify Plus is a feature-rich tool box that makes your Android experience even more fun! The app provides you with 2 main tools:</p>
+                        <ol>
+                            <li>A sticky notification containing 8 modifiable shortcuts to user's favorite apps.</li>
+                            <li>A floating widget which can work as an Android equivalent of floating control center in ios.</li>
+                        </ol>
+                        <p>For more info about the app and a look into source code, have a look <a href="https://github.com/hojat72elect/Notifyplus">here</a>.</p>
                     </div>
 
                 </div>
