Added lots of my other projects.

--- a/index.html
+++ b/index.html
@@ -284,18 +284,22 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Notify Plus</h3>
-<!--                        <p></p>-->
+                        <h3><a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a></h3>
+                        <!--                        <p></p>-->
                     </div>
 
                     <div class="timeline-content">
 
-                        <p>Notify Plus is a feature-rich tool box that makes your Android experience even more fun! The app provides you with 2 main tools:</p>
+                        <p>Notify Plus is a feature-rich tool box that makes your Android experience even more fun! The
+                            app provides you with 2 main tools:</p>
                         <ol>
                             <li>A sticky notification containing 8 modifiable shortcuts to user's favorite apps.</li>
-                            <li>A floating widget which can work as an Android equivalent of floating control center in ios.</li>
+                            <li>A floating widget which can work as an Android equivalent of floating control center in
+                                ios.
+                            </li>
                         </ol>
-                        <p>For more info about the app and a look into source code, have a look <a href="https://github.com/hojat72elect/Notifyplus">here</a>.</p>
+                        <p>For more info about the app and a look into source code, have a look <a
+                                href="https://github.com/hojat72elect/Notifyplus">here</a>.</p>
                     </div>
 
                 </div>
@@ -308,12 +312,14 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Microsoft Certified – Microsoft Certified IT Professional (MCITP) </h3>
-                        <p>Syrie | 2013</p>
+                        <h3><a href="https://github.com/hojat72elect/RoomDemo">Room Demo</a></h3>
                     </div>
 
                     <div class="timeline-content">
-                        <p>Certification Cisco Microsoft : administrateur de bases de données .</p>
+                        <p>Room Demo is my template for a clean and proficient MVVM architecture that makes use of
+                            Android Room for database management and controls GUI classes via ViewModel, DataBinding,
+                            LiveData, and kotlin coroutines.<br/>For more info about the app and its source code, have a
+                            look <a href="https://github.com/hojat72elect/RoomDemo">here</a>.</p>
                     </div>
 
                 </div>
@@ -326,13 +332,16 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Université de Damas - Diplôme d’ingénieur</h3>
-                        <p>Syrie | 2008</p>
+                        <h3><a href="https://github.com/hojat72elect/Kotlin_Data_Structures_Algorithms">Kotlin data
+                            structures and algorithms</a></h3>
                     </div>
 
                     <div class="timeline-content">
-
-                        <p>Ingénieur Génie Electrique, option: génie électrique et de communication.
+                        <p>You haven't really mastered a programming language unless you make your favorite
+                            toys and tools with it! This repository contains my latest efforts to implement all major
+                            data structures and computational algorithms in kotlin. The repo is frequently updated and
+                            available <a
+                                    href="https://github.com/hojat72elect/Kotlin_Data_Structures_Algorithms">here</a>.
                         </p>
                     </div>
                     <div class="timeline-block">
@@ -342,13 +351,26 @@
                         </div>
 
                         <div class="timeline-header">
-                            <h3>Cisco Courses – Cisco Certified Network Associate Level (CCNA) New Horizon</h3>
-                            <p>Syrie | 2007</p>
+                            <h3>Hojat Music Player</h3>
+
                         </div>
 
                         <div class="timeline-content">
 
-                            <p>Certification Cisco CCNA Routing and Switching : technicien réseau .</p>
+                            <p>Apart from all the fun, by making this simple music player I learnt these
+                                technologies:</p>
+                            <ol>
+                                <li>Material design</li>
+                                <li>Activity lifecycle</li>
+                                <li>Services</li>
+                                <li>Fragments</li>
+                                <li>RecyclerView and Adapters</li>
+                                <li>Nullability in Java</li>
+                                <li>Glide library</li>
+                                <li>Android handlers</li>
+                            </ol>
+                            <p>source code is available <a href="https://github.com/hojat72elect/Hojat_Music_Player">here</a>.
+                            </p>
                         </div>
 
                     </div>
