--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
                 <p class="intro-position">
                     <span>Native Android App Developer</span>
-                    <span>Back-end Developer</span>
+                    <span>Mobile App Developer</span>
                 </p>
 
                 <a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
@@ -423,9 +423,9 @@
 
                 <div class="service-content">
 
-                    <h3>SYSTEMES ET BASE DE DONNEES</h3>
+                    <h3>SYSTEMS AND DATABASES</h3>
 
-                    <p class="desc"># Windows # Ubuntu # MySQL <br/># Firebase.
+                    <p class="desc"># Windows # Ubuntu # Firebase.
                     </p>
 
                 </div>
@@ -438,20 +438,16 @@
 
                 <div class="service-content">
 
-                    <h3>LANGUES</h3>
+                    <h3>LANGUAGES</h3>
 
                     <ul class="skill-bars">
                         <li>
                             <div class="progress percent100"><span>100%</span></div>
-                            <strong>ARABE</strong>
+                            <strong>PERSIAN</strong>
                         </li>
                         <li>
-                            <div class="progress percent85"><span>85%</span></div>
-                            <strong>ANGLAIS</strong>
-                        </li>
-                        <li>
-                            <div class="progress percent70"><span>70%</span></div>
-                            <strong>FRANcAIS</strong>
+                            <div class="progress percent85"><span>90%</span></div>
+                            <strong>ENGLISH</strong>
                         </li>
                     </ul>
 
@@ -465,9 +461,9 @@
 
                 <div class="service-content">
 
-                    <h3>Personnalité</h3>
+                    <h3>Personality</h3>
 
-                    <p class="desc"> Personnalité : # sérieux # dynamique # organisé # travail en équipe .
+                    <p class="desc"> # INTJ # Nerd # Team Player # Ambitious
                     </p>
 
                 </div>
@@ -481,9 +477,9 @@
 
                 <div class="service-content">
 
-                    <h3>Centres d’intérêts</h3>
+                    <h3>Interests</h3>
 
-                    <p class="desc">Centres d’intérêts : # cinéma d’action # poésie classique # randonnée.
+                    <p class="desc"># Hiking # Video Games # Study
                     </p>
 
                 </div>
@@ -551,11 +547,11 @@
                 <i class="icon-pin"></i>
             </div>
 
-            <h5>Contact me</h5>
+            <h5>Location</h5>
 
             <p>
-                2 rue barbes<br> 92120
-                <br> Montrouge
+                Sudbury<br> Ontario
+                <br> Canada
             </p>
 
         </div>
@@ -566,9 +562,9 @@
                 <i class="icon-mail"></i>
             </div>
 
-            <h5>Envoyez-moi un e-mail</h5>
+            <h5>Preferred way of connection</h5>
 
-            <p>m.aboualnasser@gmail.com
+            <p>hghasemi@laurentian.ca
 
 
             </p>
@@ -581,9 +577,9 @@
                 <i class="icon-phone"></i>
             </div>
 
-            <h5>Call Me At</h5>
+            <h5>or Call Me At</h5>
 
-            <p>Phone: + 33 6 27 76 01 44<br>
+            <p>Phone: 437 332 0253<br>
 
             </p>
 
@@ -605,10 +601,29 @@
 
             <ul class="footer-social">
 
-                <li><a target="_blank" href="https://twitter.com/hojat_93"><i class="fa fa-twitter"></i></a></li>
-                <li><a target="_blank" href="https://github.com/hojat72elect"><i class="fa fa-github"
-                                                                                 aria-hidden="true"></i>
-                </a></li>
+                <li>
+                    <a
+                            target="_blank"
+                            href="https://twitter.com/hojat_93">
+                        <i class="fa fa-twitter"></i>
+                    </a>
+                </li>
+                <li>
+                    <a
+                            target="_blank"
+                            href="https://github.com/hojat72elect">
+                        <i class="fa fa-github"
+                           aria-hidden="true"></i>
+                    </a>
+                </li>
+                <li>
+                    <a
+                            target="_blank"
+                            href="https://www.linkedin.com/in/hojat-ghasemi-096ba9135/">
+                        <i class="fa fa-linkedin"></i>
+                    </a>
+                </li>
+
             </ul>
 
         </div>
