--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <p class="lead">I'm a professional software developer recently graduated from Laurentian University in
                     master's degree of Computer Science. I have been studying/working in the field of computer science
-                    during the past decade. Notify Plus is the latest example of my Android apps originally
+                    during the past decade. <a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a> is the latest example of my Android apps, originally
                     developed in Java and later on migrated to Kotlin. Latest tech-stack I'm currently working on is
                     Dart programming langauge and
                     Flutter platform.</p>
@@ -506,7 +506,7 @@
     <div class="row section-intro">
         <div class="col-twelve">
             <h5>Contact</h5>
-            <h1>I'm currently available for cooperation/employment on native Android projects</h1>
+            <h1>currently available for employment</h1>
         </div>
     </div>
     <!-- /section-intro -->
@@ -516,7 +516,7 @@
         <div class="col-twelve">
 
             <!-- form -->
-            <form id="contactform" action="//formspree.io/m.aboualnasser@gmail.com" method="POST">
+            <form id="contactform" action="//formspree.io/m.hghasemi@laurentian.ca" method="POST">
 
                 <input type="text" name="name" placeholder="Your Name">
                 <input type="email" name="_replyto" placeholder="Your Email Address">
