Added my thesis

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 
                 <p class="lead">I'm a professional software developer recently graduated from Laurentian University in
                     master's degree of Computer Science. I have been studying/working in the field of computer science
-                    during the past decade. <a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a> is the latest example of my Android apps, originally
+                    during the past decade. <a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a> is the
+                    latest example of my Android apps, originally
                     developed in Java and later on migrated to Kotlin. Latest tech-stack I'm currently working on is
                     Dart programming langauge and
                     Flutter platform.</p>
@@ -129,9 +130,6 @@
     <div class="row about-content">
 
         <div class="col-six tab-full">
-
-            <h3>PRATIQUE </h3>
-
 
             <ul class="info-list">
                 <li>
@@ -351,7 +349,7 @@
                         </div>
 
                         <div class="timeline-header">
-                            <h3>Hojat Music Player</h3>
+                            <h3><a href="https://github.com/hojat72elect/Hojat_Music_Player">Hojat Music Player</a></h3>
 
                         </div>
 
@@ -425,7 +423,7 @@
 
                     <h3>SYSTEMS AND DATABASES</h3>
 
-                    <p class="desc"># Windows # Ubuntu # Firebase.
+                    <p class="desc"># Windows # Firebase # Android
                     </p>
 
                 </div>
@@ -516,7 +514,7 @@
         <div class="col-twelve">
 
             <!-- form -->
-            <form id="contactform" action="//formspree.io/m.hghasemi@laurentian.ca" method="POST">
+            <form id="contactform" action="https://formspree.io/f/mrgjkrdw" method="POST">
 
                 <input type="text" name="name" placeholder="Your Name">
                 <input type="email" name="_replyto" placeholder="Your Email Address">
