--- a/index.html
+++ b/index.html
@@ -154,9 +154,7 @@
         </div>
 
         <div class="col-six tab-full">
-
             <h3>Technical Skills</h3>
-
 
             <ul class="skill-bars">
                 <li>
@@ -164,22 +162,21 @@
                     <strong>Java</strong>
                 </li>
                 <li>
-                    <div class="progress percent80"><span>80%</span></div>
+                    <div class="progress percent85"><span>85%</span></div>
                     <strong>Kotlin</strong>
                 </li>
                 <li>
                     <div class="progress percent80"><span>80%</span></div>
-                    <strong>XML UI design</strong>
+                    <strong>Git vcs</strong>
                 </li>
                 <li>
-                    <div class="progress percent75"><span>75%</span></div>
-                    <strong>Git version control</strong>
+                    <div class="progress percent70"><span>70%</span></div>
+                    <strong>Android Room</strong>
                 </li>
                 <li>
-                    <div class="progress percent60"><span>60%</span></div>
+                    <div class="progress percent50"><span>50%</span></div>
                     <strong>Firebase</strong>
                 </li>
-
                 <li>
                     <div class="progress percent50"><span>50%</span></div>
                     <strong>Flutter</strong>
@@ -229,8 +226,10 @@
 
                     <div class="timeline-header">
                         <h3>Master of Computational Sciences - Laurentian University - 2020_2022</h3>
-                        <p>Topic of graduate research: "Fine-tuning a General Transformer Model on Story-lines of IMDB
-                            Movies Database"
+                        <p>Topic of graduate research: "<a
+                                href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Thesis%20FINAL_Hojat%20Ghasemi_%2016-Feb-2022.pdf">Fine-tuning
+                            a General Transformer Model on Story-lines of IMDB
+                            Movies Database</a>"
                         </p>
                     </div>
 
