added new release of notify plus

--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
 
                 <img src="images/HOJAT.png" alt="Profile Picture">
 
-                <p class="lead">I'm a professional software developer recently graduated from Laurentian University in
+                <p class="lead">I'm a professional software developer recently graduated from <a
+                        href="https://laurentian.ca/program/GR-CPS">Laurentian University</a> in
                     master's degree of Computer Science. I have been studying/working in the field of computer science
                     during the past decade. <a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a> is the
                     latest example of my Android apps, originally
@@ -291,12 +292,23 @@
                             app provides you with 2 main tools:</p>
                         <ol>
                             <li>A sticky notification containing 8 modifiable shortcuts to user's favorite apps.</li>
-                            <li>A floating widget which can work as an Android equivalent of floating control center in
-                                ios.
+                            <li>A floating widget which can work as an equivalent of floating control center in
+                                iOS.
                             </li>
                         </ol>
-                        <p>For more info about the app and a look into source code, have a look <a
-                                href="https://github.com/hojat72elect/Notifyplus">here</a>.</p>
+                        <p>Apart from all the fun, the most important experiences I took from this project were
+                            these:</p>
+                        <ol>
+                            <li>Git Version Control</li>
+                            <li><a href="https://developer.android.com/reference/kotlin/android/widget/RemoteViews">RemoteViews</a>
+                                in Android
+                            </li>
+                            <li>Sticky notifications in Android</li>
+                            <li>GUI control via services</li>
+                            <li>Usage of 3rd party libraries via Gradle dependencies</li>
+                        </ol>
+                        <p>The installable APK of the app is available <a
+                                href="https://github.com/hojat72elect/Notifyplus/releases/tag/0.3.0">here</a>.</p>
                     </div>
 
                 </div>
