--- a/index.html
+++ b/index.html
@@ -226,7 +226,8 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Master of Computational Sciences - Laurentian University - 2020_2022</h3>
+                        <h3>Master of Computational Sciences - <a href="https://laurentian.ca/">Laurentian
+                            University</a> - 2020_2022</h3>
                         <p>Topic of graduate research: "<a
                                 href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/Thesis%20FINAL_Hojat%20Ghasemi_%2016-Feb-2022.pdf">Fine-tuning
                             a General Transformer Model on Story-lines of IMDB
@@ -245,7 +246,9 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3>Bachelor of science - SBUK - 2012_2017</h3>
+                        <h3>Bachelor of science - <a
+                                href="https://en.wikipedia.org/wiki/Shahid_Bahonar_University_of_Kerman">SBUK</a> -
+                            2012_2017</h3>
                     </div>
 
 
