--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div class="row button-section">
         <div class="col-twelve">
             <a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire me</a>
-            <a href="https://github.com/aboualnaser/aboualnaser.github.io/raw/master/images/CV%20_%20Mohamad%20Abou%20Alnaser_Dev%20Web%20PHP%20.pdf"
+            <a href="https://github.com/hojat72elect/hojat72elect.github.io/blob/gh-pages/images/CV_11_March_2022.pdf"
                target="_blank" title="Download CV" class="button button-primary">Download my CV</a>
         </div>
     </div>
