--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     during the past decade. <a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a> is the
                     latest example of my Android apps, originally
                     developed in Java and later on migrated to Kotlin. Latest tech-stack I'm currently working on is
-                    Dart programming langauge and
+                    Dart programming language and
                     Flutter platform.</p>
             </div>
 
