Added "Retrofit Demo" and removed "Hojat Music Library".

--- a/index.html
+++ b/index.html
@@ -344,6 +344,31 @@
                     </div>
 
                     <div class="timeline-header">
+                        <h3><a href="https://github.com/hojat72elect/Retrofit_Demo">Retrofit Demo</a></h3>
+                    </div>
+
+                    <div class="timeline-content">
+                        <p>
+                            Almost always, an Android app needs to connect to a RESTFul API in the back-end and
+                            communicate with it via HTTP methods. Retrofit is the most common choice of Java developers
+                            for implementing this network connection easily and via annotations.<br/><br/>Retrofit Demo
+                            is my template app for reading JSON data from server and parse it into kotlin data classes
+                            with GSON converter library. Source code available <a
+                                href="https://github.com/hojat72elect/Retrofit_Demo">here</a>.
+                        </p>
+                    </div>
+
+
+                </div>
+                <!-- /timeline-block -->
+
+                <div class="timeline-block">
+
+                    <div class="timeline-ico">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+
+                    <div class="timeline-header">
                         <h3><a href="https://github.com/hojat72elect/Kotlin_Data_Structures_Algorithms">Kotlin data
                             structures and algorithms</a></h3>
                     </div>
@@ -356,46 +381,19 @@
                                     href="https://github.com/hojat72elect/Kotlin_Data_Structures_Algorithms">here</a>.
                         </p>
                     </div>
-                    <div class="timeline-block">
 
-                        <div class="timeline-ico">
-                            <i class="fa fa-briefcase"></i>
-                        </div>
-
-                        <div class="timeline-header">
-                            <h3><a href="https://github.com/hojat72elect/Hojat_Music_Player">Hojat Music Player</a></h3>
-
-                        </div>
-
-                        <div class="timeline-content">
-
-                            <p>Apart from all the fun, by making this simple music player I learnt these
-                                technologies:</p>
-                            <ol>
-                                <li>Material design</li>
-                                <li>Activity lifecycle</li>
-                                <li>Services</li>
-                                <li>Fragments</li>
-                                <li>RecyclerView and Adapters</li>
-                                <li>Nullability in Java</li>
-                                <li>Glide library</li>
-                                <li>Android handlers</li>
-                            </ol>
-                            <p>source code is available <a href="https://github.com/hojat72elect/Hojat_Music_Player">here</a>.
-                            </p>
-                        </div>
-
-                    </div>
-                    <!-- /timeline-block -->
 
                 </div>
-                <!-- /timeline-wrap -->
+                <!-- /timeline-block -->
 
             </div>
-            <!-- /col-twelve -->
+            <!-- /timeline-wrap -->
 
         </div>
-        <!-- /resume-timeline -->
+        <!-- /col-twelve -->
+
+    </div>
+    <!-- /resume-timeline -->
     </div>
 </section>
 <!-- /features -->
@@ -652,7 +650,7 @@
     <div id="loader"></div>
 </div>
 
-<!-- Java Script
+<!-- JavaScript
 ================================================== -->
 <script src="js/jquery-2.1.3.min.js"></script>
 <script src="js/plugins.js"></script>
