focus on native Android

--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
 
                 <p class="intro-position">
                     <span>Native Android App Developer</span>
-                    <span>Mobile App Developer</span>
                 </p>
 
                 <a class="button stroke smoothscroll" href="#about" title="">Learn More</a>
@@ -119,9 +118,8 @@
                     master's degree of Computer Science. I have been studying/working in the field of computer science
                     during the past decade. <a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a> is the
                     latest example of my Android apps, originally
-                    developed in Java and later on migrated to Kotlin. Latest tech-stack I'm currently working on is
-                    Dart programming language and
-                    Flutter platform.</p>
+                    developed in Java and later on migrated to Kotlin. My focus is on maintainable native
+                    Android apps that can be scaled up conveniently.</p>
             </div>
 
         </div>
@@ -168,7 +166,7 @@
                 </li>
                 <li>
                     <div class="progress percent80"><span>80%</span></div>
-                    <strong>Git vcs</strong>
+                    <strong>Git version control</strong>
                 </li>
                 <li>
                     <div class="progress percent70"><span>70%</span></div>
@@ -176,12 +174,13 @@
                 </li>
                 <li>
                     <div class="progress percent50"><span>50%</span></div>
-                    <strong>Firebase</strong>
+                    <strong>Retrofit</strong>
                 </li>
                 <li>
                     <div class="progress percent50"><span>50%</span></div>
-                    <strong>Flutter</strong>
+                    <strong>RxJava</strong>
                 </li>
+
 
             </ul>
             <!-- /skill-bars -->
@@ -433,9 +432,10 @@
 
                 <div class="service-content">
 
-                    <h3>SYSTEMS AND DATABASES</h3>
+                    <h3>MY PREFERRED TECH-STACK</h3>
 
-                    <p class="desc"># Windows # Firebase # Android
+                    <p class="desc">
+                        MVVM <br/> Retrofit <br/> RxJava <br/> Glide <br/> OpenCV
                     </p>
 
                 </div>
@@ -459,6 +459,8 @@
                             <div class="progress percent85"><span>90%</span></div>
                             <strong>ENGLISH</strong>
                         </li>
+
+
                     </ul>
 
                 </div>
