--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                     <h3>MY PREFERRED TECH-STACK</h3>
 
                     <p class="desc">
-                        MVVM <br/> Retrofit <br/> RxJava <br/> Glide <br/> OpenCV
+                        MVVM <br/> Retrofit <br/> RxJava <br/> XML UI <br/> Glide <br/> OpenCV
                     </p>
 
                 </div>
