--- a/index.html
+++ b/index.html
@@ -348,11 +348,13 @@
 
                     <div class="timeline-content">
                         <p>
-                            Almost always, an Android app needs to connect to a RESTFul API in the back-end and
-                            communicate with it via HTTP methods. Retrofit is the most common choice of Java developers
-                            for implementing this network connection easily and via annotations.<br/><br/>Retrofit Demo
-                            is my template app for reading JSON data from server and parse it into kotlin data classes
-                            with GSON converter library. Source code available <a
+                            Retrofit library is the most common choice of Java developers for connecting to a RESTFul
+                            API in the back end.<br/> "Retrofit Demo" is my template app for reading JSON file from
+                            server
+                            and then present it to the user with the help of LiveData and kotlin Coroutine libraries.
+                            The JSON data is parsed into kotlin data classes with GSON converter library; furthermore,
+                            OkHttp logging interceptor was used for logging network interactions. Source code is
+                            available <a
                                 href="https://github.com/hojat72elect/Retrofit_Demo">here</a>.
                         </p>
                     </div>
