Room demo and Retrofit demo updated

--- a/index.html
+++ b/index.html
@@ -327,10 +327,25 @@
                     </div>
 
                     <div class="timeline-content">
-                        <p>Room Demo is my template for a clean and proficient MVVM architecture that makes use of
-                            Android Room for database management and controls GUI classes via ViewModel, DataBinding,
-                            LiveData, and kotlin coroutines.<br/>For more info about the app and its source code, have a
-                            look <a href="https://github.com/hojat72elect/RoomDemo">here</a>.</p>
+                        <p>Historically, Android apps used SQLite API for creating a local relational database. While
+                            that
+                            worked fine, the modern Room persistence library offers compile-tile SQL query verification
+                            and convenience annotations to reduce code lines.
+                            <br/>
+                            "Room Demo" is my template app for creating a single-table relational database storing
+                            subscribers. Source code is available <a
+                                    href="https://github.com/hojat72elect/RoomDemo">here</a>.<br/>
+                            Technologies used:
+                        <ul>
+                            <li>Room persistence library</li>
+                            <li>MVVM architecture</li>
+                            <li>ViewModel</li>
+                            <li>DataBinding</li>
+                            <li>LiveData</li>
+                            <li>kotlin coroutines</li>
+                        </ul>
+
+                        </p>
                     </div>
 
                 </div>
@@ -356,6 +371,15 @@
                             OkHttp logging interceptor was used for logging network interactions. Source code is
                             available <a
                                 href="https://github.com/hojat72elect/Retrofit_Demo">here</a>.
+                            <br/>Technologies
+                            used:
+                        <ul>
+                            <li>Retrofit</li>
+                            <li>GSON</li>
+                            <li>Kotlin Coroutines</li>
+                            <li>LiveData</li>
+                            <li>OkHttp3 logging interceptor</li>
+                        </ul>
                         </p>
                     </div>
 
