--- a/index.html
+++ b/index.html
@@ -394,16 +394,25 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3><a href="https://github.com/hojat72elect/Kotlin_Data_Structures_Algorithms">Kotlin data
-                            structures and algorithms</a></h3>
+                        <h3><a href="https://github.com/hojat72elect/RX_Demo">RxJava Demo</a>
+                        </h3>
                     </div>
 
                     <div class="timeline-content">
-                        <p>You haven't really mastered a programming language unless you make your favorite
-                            toys and tools with it! This repository contains my latest efforts to implement all major
-                            data structures and computational algorithms in kotlin. The repo is frequently updated and
-                            available <a
-                                    href="https://github.com/hojat72elect/Kotlin_Data_Structures_Algorithms">here</a>.
+                        <p>
+                            <a href="https://en.wikipedia.org/wiki/Reactive_programming">Reactive programming</a>
+                            paradigm is the best answer for the problem of handling realtime
+                            streams of data and state change propagation in an asynchronous fashion; and
+                            <a href="https://reactivex.io/">ReactiveX</a> library helps in achieving reactiveness in a
+                            langauge independent fashion. Consequently, <a href="https://github.com/ReactiveX/RxJava">RxJava</a>
+                            and <a
+                                href="https://github.com/ReactiveX/Rxandroid">RxAndroid</a> are
+                            de facto
+                            path for performing reactive,
+                            event-driven apps in native Android.<br/>"RxJava Demo" is my template app for easily
+                            implementing
+                            reactive patterns of RxJava in an Android app. Source code is available <a
+                                href="https://github.com/hojat72elect/RX_Demo">here</a>.
                         </p>
                     </div>
 
