published notify plus

--- a/index.html
+++ b/index.html
@@ -116,8 +116,10 @@
                 <p class="lead">I'm a professional software developer recently graduated from <a
                         href="https://laurentian.ca/program/GR-CPS">Laurentian University</a> in
                     master's degree of Computer Science. I have been studying/working in the field of computer science
-                    during the past decade. <a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a> is the
-                    latest example of my Android apps, originally
+                    during the past decade. <a
+                            href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus"
+                            style="color:blue">Notify Plus</a> is the
+                    latest example of my published Android apps, originally
                     developed in Java and later on migrated to Kotlin. My focus is on maintainable native
                     Android apps that can be scaled up conveniently.</p>
             </div>
@@ -284,8 +286,8 @@
                     </div>
 
                     <div class="timeline-header">
-                        <h3><a href="https://github.com/hojat72elect/Notifyplus">Notify Plus</a></h3>
-                        <!--                        <p></p>-->
+                        <h3><a href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus">Notify
+                            Plus</a></h3>
                     </div>
 
                     <div class="timeline-content">
@@ -301,16 +303,18 @@
                         <p>Apart from all the fun, the most important experiences I took from this project were
                             these:</p>
                         <ol>
-                            <li>Git Version Control</li>
+                            <li>Google Play Store publishing process.</li>
+                            <li>Git Version Control.</li>
                             <li><a href="https://developer.android.com/reference/kotlin/android/widget/RemoteViews">RemoteViews</a>
-                                in Android
+                                in Android.
                             </li>
-                            <li>Sticky notifications in Android</li>
-                            <li>GUI control via services</li>
-                            <li>Usage of 3rd party libraries via Gradle dependencies</li>
+                            <li>Sticky notifications in Android.</li>
+                            <li>GUI control via services.</li>
+                            <li>Usage of 3rd party libraries via Gradle dependencies.</li>
                         </ol>
-                        <p>The installable APK of the app is available <a
-                                href="https://github.com/hojat72elect/Notifyplus/releases/tag/0.3.0">here</a>.</p>
+                        <p>This app was published to Google Play Store in <a
+                                href="https://play.google.com/store/apps/details?id=ca.sudbury.hghasemi.notifyplus">here</a>.
+                        </p>
                     </div>
 
                 </div>
